objects/Onboarding_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Onboarding Contacts</relationshipLabel>
        <relationshipName>Onboarding_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Onboarding Contacts</relationshipLabel>
        <relationshipName>Onboarding_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POC</fullName>
                </value>
                <value>
                    <fullName>Trainee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Junction object between Onboarding and Contact, to maintain list of contacts associated with the Onboarding's account on the Onboarding</description>
    <label>Onboarding Contact</label>
    <nameField>
        <displayFormat>OC-{00000}</displayFormat>
        <label>Onboarding Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>